# fob

./: .eslintignore  .gitignore  .oxlintrc.json  .prettierignore  .prettierrc  ARCHITECTURE_OVERHAUL_STATUS.md  Cargo.toml  PHASE5_CLEANUP_SUMMARY.md  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.toml  rust-toolchain.toml  turbo.json
crates/fob/: Cargo.toml
crates/fob-analysis/: Cargo.toml  README.md
crates/fob-analysis/examples/: basic_analysis.rs  circular_detection.rs  framework_components.rs  path_aliases.rs
crates/fob-analysis/src/: analyzer.rs  cache.rs  config.rs  lib.rs  result.rs  stats.rs  trace.rs
crates/fob-analysis/src/extractors/: astro.rs  (+4 more)
crates/fob-browser-test/: Cargo.toml
crates/fob-browser-test/src/: browser.rs  console.rs  error.rs  lib.rs  page.rs  server.rs  wait.rs
crates/fob-browser-test/tests/: integration.rs
crates/fob-bundler/: Cargo.toml  TARGETS.md
crates/fob-bundler/src/: analysis.rs  config.rs  diagnostics.rs  from_rolldown.rs  lib.rs  logging.rs  module_collection_plugin.rs  runtime.rs  target.rs
crates/fob-bundler/tests/: app_tests.rs  cache_tests.rs  components_tests.rs  decorator_tests.rs  dts_generation_tests.rs  file_type_tests.rs  file_type_tests.rs.disabled  helpers.rs  integration_asset_resolution.rs  library_tests.rs  mdx_integration.rs  metadata_tests.rs  parallel_builds_tests.rs  plugin_invocation_tests.rs  plugin_invocation_tests.rs.disabled  usage_count.rs  virtual_file_tests.rs  virtual_file_tests.rs.disabled  write_tests.rs
crates/fob-cli/: Cargo.toml
crates/fob-cli/src/: analysis.rs  error.rs  lib.rs  logger.rs  main.rs  server.rs
crates/fob-cli/tests/: integration_build.rs  integration_config.rs  integration_dev_server.rs
crates/fob-config/: Cargo.toml
crates/fob-config/src/: config.rs  dev.rs  discovery.rs  error.rs  eval.rs  lib.rs  settings.rs  validation.rs
crates/fob-config/tests/: defaults.rs  discovery.rs  eval.rs  merge_behavior.rs  profiles.rs  validation.rs
crates/fob-core/: Cargo.toml
crates/fob-core/examples/: test_semantic.rs
crates/fob-core/src/: lib.rs  native_runtime.rs  runtime.rs  test_utils.rs  wasm_runtime.rs
crates/fob-core/tests/: app_tests.rs  components_tests.rs  dts_generation_tests.rs  integration_asset_resolution.rs  library_tests.rs  mdx_integration.rs  metadata_tests.rs  usage_count.rs  write_tests.rs
crates/fob-docs/: Cargo.toml
crates/fob-docs/examples/: basic.rs  llm_enhancement.rs  test_codemirror.rs
crates/fob-docs/src/: error.rs  extractor.rs  jsdoc.rs  lib.rs  model.rs  plugin.rs  writeback.rs
crates/fob-docs/tests/: extraction_tests.rs  json_tests.rs  markdown_tests.rs
crates/fob-gen/: Cargo.toml
crates/fob-gen/examples/: api_client.rs  dev_ui.rs  react_component.rs  route_manifest.rs
crates/fob-gen/src/: builder.rs  dev_ui.rs  error.rs  format.rs  internal.rs  jsx.rs  lib.rs  parser.rs  program_builder.rs  query.rs  transform.rs
crates/fob-gen/tests/: builder_tests.rs  jsx_tests.rs  program_builder_tests.rs  query.rs  roundtrip_tests.rs
crates/fob-graph/: Cargo.toml  README.md
crates/fob-graph/examples/: basic_analysis.rs  basic_graph.rs  circular_detection.rs  concurrent_access.rs  dependency_analysis.rs  framework_components.rs  path_aliases.rs  symbol_analysis.rs
crates/fob-graph/src/: class_enum_extraction.rs  collection.rs  dependency_chain.rs  export.rs  from_collection.rs  lib.rs  module.rs  module_id.rs  package_json.rs  span.rs
crates/fob-mdx/: Cargo.toml  README.md
crates/fob-mdx-runtime/: Cargo.toml  README.md
crates/fob-mdx-runtime/src/: lib.rs
crates/fob-mdx-wasm/: Cargo.toml
crates/fob-mdx-wasm/src/: error.rs  lib.rs
crates/fob-mdx-wasm/tests/: browser.rs  error_handling.rs  snapshot.rs
crates/fob-mdx/src/: bundler.rs  error.rs  lib.rs  options.rs  utils.rs
crates/fob-mdx/tests/: compilation.rs
crates/fob-native/: Cargo.toml  README.md  esm-wrapper.mjs  index.d.ts  index.js  justfile  package.json  wrapper.d.ts  wrapper.js
crates/fob-native/scripts/: sync-binary-ci.js  sync-binary.js
crates/fob-native/src/: bundle_result.rs  error.rs  error_mapper.rs  lib.rs  runtime.rs  types.rs
crates/fob-native/tests/: conversion_tests.rs  core_bundler_tests.rs  edge_cases_tests.rs  error_mapping_tests.rs  napi_integration_tests.rs  security_tests.rs
crates/fob-php/: Cargo.toml  README.md  build.rs  justfile
crates/fob-php/src/: error.rs  lib.rs  runtime.rs  tokio_runtime.rs  types.rs
crates/fob-plugin-astro/: Cargo.toml
crates/fob-plugin-astro/src/: lib.rs
crates/fob-plugin-astro/tests/: integration.rs
crates/fob-plugin-css/: Cargo.toml
crates/fob-plugin-css/src/: config.rs  lib.rs
crates/fob-plugin-mdx/: Cargo.toml
crates/fob-plugin-mdx/src/: lib.rs
crates/fob-plugin-svelte/: Cargo.toml
crates/fob-plugin-svelte/src/: lib.rs
crates/fob-plugin-svelte/tests/: integration.rs
crates/fob-plugin-tailwind/: Cargo.toml
crates/fob-plugin-tailwind/src/: config.rs  error.rs  generator.rs  lib.rs
crates/fob-plugin-vue/: Cargo.toml
crates/fob-plugin-vue/src/: lib.rs
crates/fob-plugin-vue/tests/: integration.rs
crates/fob-python/: Cargo.toml  fob.pyi  justfile
crates/fob-python/src/: error.rs  lib.rs  runtime.rs  types.rs
crates/fob-ruby/: Cargo.toml  justfile
crates/fob-ruby/src/: error.rs  lib.rs  runtime.rs  types.rs
crates/fob-store/: Cargo.toml
crates/fob-store/src/: core.rs  lib.rs
crates/fob-target/: Cargo.toml
crates/fob-target/src/: detection.rs  lib.rs  target.rs
crates/fob-wasm/: .gitignore  Cargo.toml  build.rs  build.sh
crates/fob-wasm/src/: lib.rs
crates/fob-wasm/tests/: integration.rs  runtime.rs
crates/fob-wasm/wit/: bundler.wit
crates/fob/src/: lib.rs  native_runtime.rs  runtime.rs  test_utils.rs  wasm_runtime.rs
crates/fob/tests/: import_kinds.rs
crates/rolldown-vendor/: Cargo.toml
crates/rolldown-vendor/src/: main.rs  publish.rs  transform.rs
examples/rust/blog-axum/: .gitignore  Cargo.toml  README.md
examples/rust/cloudflare-worker/: .gitignore  Cargo.toml  package.json  test-local.sh  wrangler.toml
(+629 files in other folders)
