[workspace]
resolver = "2"
members = [
    "crates/fob-wasm",
    "crates/fob-config",
    "crates/fob",
    "crates/fob-store",
    "crates/fob-bundler",
    "crates/fob-native",
    "crates/fob-cli",
    "crates/fob-plugin-css",
    "crates/fob-plugin-mdx",
    "crates/fob-plugin-tailwind",
    "crates/fob-gen",
    "crates/fob-browser-test",
    "examples/rust/*",
]
# Exclude WASM crate from default build (requires --target wasm32-wasip1)
default-members = [
    "crates/fob-config",
    "crates/fob",
    "crates/fob-store",
    "crates/fob-bundler",
    "crates/fob-native",
    "crates/fob-cli",
    "crates/fob-plugin-css",
    "crates/fob-plugin-mdx",
    "crates/fob-plugin-tailwind",
    "crates/fob-gen",
    "crates/fob-browser-test",
    "examples/rust/*",
]

[workspace.package]
version = "0.1.0"
authors = ["Fob Contributors"]
edition = "2021"
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/nine-gen/fob"
homepage = "https://fob.dev"
categories = ["development-tools", "compilers"]
keywords = ["bundler", "esm", "javascript", "typescript", "rust"]

[workspace.dependencies]
# OXC ecosystem - High-performance JavaScript tooling
oxc_parser = "0.97.0"
oxc_ast = "0.97.0"
oxc_ast_visit = "0.97.0"
oxc_semantic = "0.97.0"
oxc_resolver = "11.13.0"
oxc_transformer = "0.97.0"
oxc_transformer_plugins = "0.97.0"
oxc_codegen = "0.97.0"
oxc_minifier = "0.97.0"
oxc_allocator = "0.97.0"
oxc_span = "0.97.0"
oxc_sourcemap = "6.0.1"
oxc_traverse = "0.97.0"
oxc_isolated_declarations = "0.97.0"

# Rolldown bundler
rolldown = { git = "https://github.com/rolldown/rolldown", tag = "v1.0.0-beta.50" }
rolldown_plugin = { git = "https://github.com/rolldown/rolldown", tag = "v1.0.0-beta.50" }
rolldown_common = { git = "https://github.com/rolldown/rolldown", tag = "v1.0.0-beta.50" }
rolldown_error = { git = "https://github.com/rolldown/rolldown", tag = "v1.0.0-beta.50" }

# Core dependencies
rustc-hash = "2.1.1"
dashmap = "6.1.0"
rayon = "1.11.0"
petgraph = "0.8.3"
indexmap = "2.11.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
anyhow = "1.0.100"
thiserror = "2.0.17"

figment = { version = "0.10.19", features = ["toml", "json", "yaml", "env"] }

# Hashing and caching
seahash = "4.1.0"
blake3 = "1.8.2"
sha2 = "0.10"  # WASM-compatible alternative to blake3
phf = "0.11"  # Perfect hash function for embedded data

# Path and file handling
path-clean = "1.0.1"
ignore = "0.4.23"
walkdir = "2.5"

# Async runtime (for future build-as-service)
# Base tokio with no features - individual crates opt-in to what they need
# This prevents workspace feature unification from activating WASM-incompatible features
tokio = { version = "1.47.1", default-features = false }
async-trait = "0.1.89"

# Testing and temporary files
tempfile = "3.23.0"
proptest = "1.8.0"
regex = "1.11.3"

# WASM bindings
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
serde-wasm-bindgen = "0.6"
js-sys = "0.3.81"
web-sys = "0.3.81"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

# UUID with WASM support - uses js feature which enables getrandom 0.3 with js backend
# The js feature internally uses getrandom 0.3, which needs the "js" feature enabled
uuid = { version = "1.18", features = ["v4", "js", "fast-rng"] }

# Concurrency primitives
once_cell = "1.21.3"
parking_lot = "0.12"

# CLI ecosystem
clap = { version = "4.5.51", features = ["derive", "color"] }
axum = "0.8.6"
tower-http = { version = "0.6.6", features = ["compression-gzip", "fs"] }
rust-embed = "8.9.0"
console = "0.16.1"
indicatif = "0.18.3"
owo-colors = "4.1.0"
notify = "8.2.0"
miette = "7.6.0"

# Date/time
chrono = { version = "0.4.42", features = ["serde"] }

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["env-filter", "fmt"] }

# Routing
matchit = "0.9.0"

# Templating
minijinja = { version = "2.6.0", features = ["loader"] }

# Markdown and MDX parsing
markdown = "1.0.0-alpha.21"

# CSS parsing and transformation
lightningcss = "1.0.0-alpha.68"

# Graph database storage
surrealdb = { version = "2", default-features = false }

# WASM support - getrandom 0.3 provides random number generation for WASM targets
# Note: For wasm32-unknown-unknown (browser), use "wasm_js" feature to enable browser's Crypto.getRandomValues()
# Note: For wasm32-wasip1-threads (WASI), built-in randomness via WASI is available (no special features needed)
getrandom = { version = "0.3", features = ["wasm_js"] }

# Note: uuid with js feature is handled via workspace.dependencies
# fob crates declare uuid as a direct dependency (inheriting workspace features)
# This triggers feature unification, forcing rolldown's transitive uuid to use js feature

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

# Workspace-level lints for WASM compatibility and code quality
[workspace.lints.clippy]
# Enforce Runtime trait usage instead of std::fs
disallowed_methods = "deny"

[workspace.lints.rust]
# Allow async fn in traits - we use async-trait crate which handles this properly
async_fn_in_trait = "allow"
# Missing docs warnings are tracked separately per crate
missing_docs = "allow"

