[workspace]
resolver = "2"
members = [
    "crates/fob-config",
    "crates/fob-graph",
    "crates/fob-bundler",
    "crates/fob-target",
    "crates/fob-native",
    "crates/fob-cli",
    "crates/fob-gen",
    "crates/fob-browser-test",
    "crates/fob-mdx",
    "crates/fob-mdx-wasm",
    "examples/rust/*",
]
# Exclude WASM crate from default build (requires --target wasm32-wasip1)
default-members = [
    "crates/fob-config",
    "crates/fob-graph",
    "crates/fob-bundler",
    "crates/fob-target",
    "crates/fob-native",
    "crates/fob-cli",
    "crates/fob-gen",
    "crates/fob-browser-test",
    "crates/fob-mdx",
    "examples/rust/*",
]

[workspace.package]
version = "0.4.3"
authors = ["Taron Foxworth <fox@9generations.com>"]
edition = "2024"
rust-version = "1.85"  # MSRV - minimum supported Rust version (edition 2024 requires 1.85+)
license = "MIT"
repository = "https://github.com/foxworth-uni/fob"
homepage = "https://fob.dev"
categories = ["development-tools", "compilers"]
keywords = ["bundler", "esm", "javascript", "typescript", "rust"]

[workspace.dependencies]
# OXC ecosystem - High-performance JavaScript tooling
oxc_parser = "0.103.0"
oxc_ast = "0.103.0"
oxc_ast_visit = "0.103.0"
oxc_semantic = "0.103.0"
oxc_resolver = "11.14.2"
oxc_transformer = "0.103.0"
oxc_transformer_plugins = "0.103.0"
oxc_codegen = "0.103.0"
oxc_minifier = "0.103.0"
oxc_allocator = "0.103.0"
oxc_span = "0.103.0"
oxc_sourcemap = "6.0.1"
oxc_traverse = "0.103.0"
oxc_isolated_declarations = "0.103.0"

# Rolldown bundler (via brk_rolldown crates from crates.io)
rolldown = { package = "brk_rolldown", version = "0.6.0" }
rolldown_plugin = { package = "brk_rolldown_plugin", version = "0.6.0" }
rolldown_common = { package = "brk_rolldown_common", version = "0.6.0" }
rolldown_error = { package = "brk_rolldown_error", version = "0.6.0" }
rolldown_fs = { package = "brk_rolldown_fs", version = "0.6.0" }

# Core dependencies
rustc-hash = "2.1.1"
dashmap = "6.1.0"
rayon = "1.11.0"
petgraph = "0.8.3"
indexmap = "2.12.1" 
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
toml = "0.9.8"
toml_edit = "0.23.9"
anyhow = "1.0.100"
thiserror = "2.0.17"

figment = { version = "0.10.19", features = ["toml", "json", "yaml", "env"] }

# Hashing and caching
seahash = "4.1.0"
blake3 = "1.8.2"
sha2 = "0.10"  # WASM-compatible alternative to blake3
phf = "0.11"  # Perfect hash function for embedded data
bincode = "1.3"  # Binary serialization for build cache
redb = "3.1.0"  # Embedded K/V store for persistent build cache

# Path and file handling
path-clean = "1.0.1"
ignore = "0.4.25"
walkdir = "2.5"
memchr = "2.7"  # Efficient byte searching for parsing

# Async runtime (for future build-as-service)
# Base tokio with no features - individual crates opt-in to what they need
# This prevents workspace feature unification from activating WASM-incompatible features
tokio = { version = "1.47.1", default-features = false }
async-trait = "0.1.89"

# Testing and temporary files
tempfile = "3.23.0"
proptest = "1.8.0"
regex = "1.11.3"

# WASM bindings
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
serde-wasm-bindgen = "0.6"
js-sys = "0.3.81"
web-sys = "0.3.81"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

# UUID with WASM support - uses js feature which enables getrandom 0.3 with js backend
# The js feature internally uses getrandom 0.3, which needs the "js" feature enabled
uuid = { version = "1.18", features = ["v4", "js", "fast-rng"] }

# Concurrency primitives
once_cell = "1.21.3"
parking_lot = "0.12"

# CLI ecosystem
clap = { version = "4.5.51", features = ["derive", "color"] }
axum = "0.8.6"
tower-http = { version = "0.6.6", features = ["compression-gzip", "fs"] }
rust-embed = "8.9.0"
console = "0.16.1"
indicatif = "0.18.3"
owo-colors = "4.1.0"
notify = "8.2.0"
miette = "7.6.0"

# Date/time
chrono = { version = "0.4.42", features = ["serde"] }

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["env-filter", "fmt"] }

# Routing
matchit = "0.9.0"

# Templating
minijinja = { version = "2.12.0", features = ["loader"] }

# Markdown and MDX parsing
markdown = "1.0.0-alpha.21"
winnow = "0.7"

# CSS parsing and transformation
lightningcss = "1.0.0-alpha.68"

# WASM support - getrandom 0.3 provides random number generation for WASM targets
# Note: For wasm32-unknown-unknown (browser), use "wasm_js" feature to enable browser's Crypto.getRandomValues()
# Note: For wasm32-wasip1-threads (WASI), built-in randomness via WASI is available (no special features needed)
getrandom = { version = "0.3.4", features = ["wasm_js"] }

# Note: uuid with js feature is handled via workspace.dependencies
# fob crates declare uuid as a direct dependency (inheriting workspace features)
# This triggers feature unification, forcing rolldown's transitive uuid to use js feature

# Internal crates
fob-bundler = { path = "crates/fob-bundler", version = "0.4.3" }
fob-native = { path = "crates/fob-native", version = "0.4.3" }
fob-mdx = { path = "crates/fob-mdx", version = "0.4.3" }
fob-mdx-wasm = { path = "crates/fob-mdx-wasm", version = "0.4.3" }

# MDX dependencies
serde-saphyr = "0.0"
bon = "3.8.1"
wasm-bindgen-test = "0.3.42"

# External Workspace Dependencies

# Native Bindings
napi = { version = "3", default-features = false, features = ["napi6", "tokio_rt"] }
napi-derive = "3"
napi-build = "2.3"

# WASM Bindings
wit-bindgen = "0.49.0"

# Schema & Validation
jsonschema = "0.37.1"
schemars = "1.1"

# Testing
assert_cmd = "2.1.1"
predicates = "3.1"
insta = "1.44.1"
serial_test = "3.2.0"


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

# Workspace-level lints for WASM compatibility and code quality
[workspace.lints.clippy]
# Enforce Runtime trait usage instead of std::fs
disallowed_methods = "deny"

[workspace.lints.rust]
# Allow async fn in traits - we use async-trait crate which handles this properly
async_fn_in_trait = "allow"
# Missing docs warnings are tracked separately per crate
missing_docs = "allow"

