[package]
name = "fob-browser-test"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
publish = false

[dependencies]
# Browser automation
chromiumoxide = "0.7.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Error handling
thiserror = "2.0.17"

# Traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
urlencoding = "2.1"

[features]
default = []

# Enable visible browser for debugging
visible = []
