[package]
name = "fob-bundler"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fob bundler - Rolldown-based bundling on top of fob foundation"

[dependencies]
    # Foundation crates
    fob-core = { path = "../fob-core", version = "0.2.0", features = ["test-utils"] }
    fob-graph = { path = "../fob-graph", version = "0.2.0" }
    fob-analysis = { path = "../fob-analysis", version = "0.2.0" }

# Code generation and AST utilities
fob-gen = { path = "../fob-gen", version = "0.2.0", features = ["parser", "query-api", "fob_internal"] }

# Rolldown bundler integration
rolldown = { workspace = true }
rolldown_plugin = { workspace = true }
rolldown_common = { workspace = true }
rolldown_error = { workspace = true }

# TypeScript .d.ts generation dependencies (native-only, optional)
oxc_isolated_declarations = { workspace = true, optional = true }
oxc_codegen = { workspace = true, optional = true }

# Core dependencies
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
async-trait.workspace = true
path-clean.workspace = true
rustc-hash.workspace = true
serde_json.workspace = true
anyhow.workspace = true
miette.workspace = true

# Asset handling dependencies
oxc_parser.workspace = true
oxc_ast.workspace = true
oxc_ast_visit.workspace = true
oxc_allocator.workspace = true
oxc_span.workspace = true
oxc_semantic.workspace = true
parking_lot.workspace = true
sha2.workspace = true
regex.workspace = true

# UUID for WASM compatibility
uuid.workspace = true

[features]
default = []

# TypeScript declaration file generation (requires native target)
dts-generation = ["dep:oxc_isolated_declarations", "dep:oxc_codegen"]

# Test utilities (for integration tests)
test-utils = []

# Platform-specific dependencies for native runtime
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["rt", "fs"] }

[dev-dependencies]
tempfile.workspace = true

# Platform-specific dev dependencies for native tests
[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# Lints - inherit workspace configuration
[lints]
workspace = true

