[package]
name = "fob-cli"
version = "0.3.0"
edition = "2021"
authors.workspace = true
license = "MIT"
description = "Fob bundler CLI - fast JavaScript/TypeScript bundler"
repository = "https://github.com/foxworth-uni/fob"
keywords = ["bundler", "javascript", "typescript", "rolldown"]
categories = ["development-tools::build-utils"]

[[bin]]
name = "fob"
path = "src/main.rs"

[features]
default = []
dts-generation = ["fob-bundler/dts-generation"]

[dependencies]
# Core dependencies
fob-bundler = { path = "../fob-bundler", version = "0.3.0" }
fob-config = { path = "../fob-config", version = "0.3.0" }
fob-gen = { path = "../fob-gen", version = "0.3.0" }

# Async runtime
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "signal"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true, features = ["fancy"] }

# CLI framework
clap = { workspace = true }

# Configuration
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
figment = { workspace = true }
jsonschema = { workspace = true }
schemars = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Terminal UI
console = { workspace = true }
indicatif = { workspace = true }
owo-colors = { workspace = true }

# File watching
notify = { workspace = true }

# Server
axum = { workspace = true }
tower-http = { workspace = true, features = ["fs", "cors"] }
rust-embed = { workspace = true }

# Concurrency
parking_lot = "0.12"
async-stream = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
insta = { workspace = true }
serial_test = { workspace = true }
