[package]
name = "fob-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
figment.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

# Runtime dependencies (conditional on eval feature)
funtime = { workspace = true, optional = true }
funtime-boa = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt"], optional = true }

[features]
default = []
# Enable JavaScript/TypeScript config file support
eval = ["funtime", "funtime-boa", "tokio"]

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
