[package]
name = "fob-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
description = "Configuration loading and validation for the Fob bundler"

[dependencies]
figment.workspace = true
indexmap.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[features]
default = []

[dev-dependencies]
tempfile.workspace = true
