[package]
name = "fob-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fob bundler core - Pure Rust library built on Rolldown"

[dependencies]
# Rolldown bundler integration (optional - can be disabled for pure analysis)
rolldown = { workspace = true, optional = true }
rolldown_plugin = { workspace = true, optional = true }
rolldown_common = { workspace = true, optional = true }
rolldown_error = { workspace = true, optional = true }

# MDX compilation support from Bunny (WASM-compatible)
bunny-mdx = { path = "../../../bunny/crates/bunny-mdx" }
fob-plugin-mdx = { path = "../fob-plugin-mdx" }

# Code generation and AST utilities
fob-gen = { path = "../fob-gen", features = ["parser", "query-api", "fob_internal"] }

# Documentation generation (native-only, optional)
fob-docs = { path = "../fob-docs", optional = true }

# TypeScript .d.ts generation dependencies (native-only, optional)
oxc_isolated_declarations = { workspace = true, optional = true }
oxc_codegen = { workspace = true, optional = true }

# Core dependencies (all WASM-compatible)
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
async-trait.workspace = true
path-clean.workspace = true
rustc-hash.workspace = true
serde_json.workspace = true
anyhow.workspace = true

# Asset handling dependencies
oxc_parser.workspace = true
oxc_ast.workspace = true
oxc_ast_visit.workspace = true
oxc_allocator.workspace = true
oxc_span.workspace = true
oxc_semantic.workspace = true
parking_lot.workspace = true
sha2.workspace = true
regex.workspace = true

# Transitive dependency feature control
# uuid is pulled in by rolldown (via cfb->infer chain) but with default features
# We declare it explicitly to trigger feature unification with workspace settings
# This ensures uuid compiles with "js" feature for WASM targets (Crypto.getRandomValues)
uuid.workspace = true

# SurrealDB for graph storage (optional - native targets only)
surrealdb = { workspace = true, features = ["kv-mem"], optional = true }

[features]
default = ["rolldown-integration"]

# SurrealDB graph storage (native targets only)
storage = ["dep:surrealdb"]

# Rolldown bundler integration
rolldown-integration = ["rolldown", "rolldown_plugin", "rolldown_common", "rolldown_error"]

# TypeScript declaration file generation (requires native target)
# This feature automatically includes rolldown-integration
dts-generation = ["rolldown-integration", "dep:oxc_isolated_declarations", "dep:oxc_codegen"]

# Documentation generation (requires native target)
docs-generation = ["rolldown-integration", "fob-docs"]

# LLM-enhanced documentation (requires native target + docs-generation + llm feature in fob-docs)
llm-docs = ["docs-generation", "fob-docs/llm"]

# Test utilities (for integration tests)
# This exposes test_utils module for use in integration tests
test-utils = []

# Platform-specific dependencies for native runtime
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["rt", "fs"] }
surrealdb = { workspace = true, features = ["kv-rocksdb"] }

[dev-dependencies]
tempfile.workspace = true

# Platform-specific dev dependencies for native tests
[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# Lints - inherit workspace configuration
[lints]
workspace = true
