[package]
name = "fob-mdx-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Runtime MDX compiler and bundler - compile+bundle MDX from CMS/database at request time"

[lib]
name = "fob_mdx_runtime"

[features]
default = ["bundler"]
bundler = ["dep:fob-bundler", "dep:fob-plugin-mdx", "dep:rolldown_common", "dep:tokio"]

[dependencies]
fob-mdx = { workspace = true }

anyhow.workspace = true
thiserror.workspace = true
bon.workspace = true

fob-bundler = { workspace = true, optional = true }
fob-plugin-mdx = { workspace = true, optional = true }
rolldown_common = { workspace = true, optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"], optional = true }

[dev-dependencies]
