[package]
name = "fob-mdx"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
description = "Standalone MDX v3 compiler for Rust - core compiler without bundler integration"

[lib]
name = "fob_mdx"

[dependencies]
markdown.workspace = true
oxc_parser.workspace = true
oxc_allocator.workspace = true
oxc_span.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true
tracing.workspace = true
path-clean.workspace = true
regex.workspace = true
bon.workspace = true
winnow.workspace = true

[dev-dependencies]
anyhow.workspace = true
async-trait.workspace = true

