[package]
name = "fob-mdx"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
description = "Standalone MDX v3 compiler for Rust - core compiler without bundler integration"

[lib]
name = "fob_mdx"

[features]
default = []
bundler = ["dep:fob-bundler"]
runtime = ["bundler", "dep:rolldown_common", "dep:tokio"]

[dependencies]
markdown.workspace = true
oxc_parser.workspace = true
oxc_allocator.workspace = true
oxc_span.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-saphyr.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true
tracing.workspace = true
path-clean.workspace = true
regex.workspace = true
bon.workspace = true

# Optional bundler integration dependencies
fob-bundler = { workspace = true, optional = true }
rolldown_common = { workspace = true, optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

